Build and Java 17

--- a/label-service/Makefile
+++ b/label-service/Makefile
@@ -1,7 +1,8 @@
 default: build
 
 build:
-	mvn clean package && docker build -f src/main/docker/Dockerfile.jvm -t label-service .
+	docker build -f src/main/docker/Dockerfile.native -t label-service .
+#	mvn clean package && docker build -f src/main/docker/Dockerfile.jvm -t label-service .
 
 build-loadbalancer:
 	docker-compose build loadbalancer
@@ -11,3 +12,5 @@ run: build-loadbalancer
 
 stop:
 	docker-compose stop
+
+restart: stop run
