Refactor build tools

--- a/label-aggregator-quarkus3/Dockerfile.native
+++ b/label-aggregator-quarkus3/Dockerfile.native
@@ -1,11 +1,9 @@
 ## Stage 1 : build with maven builder image with native capabilities
-FROM quay.io/quarkus/ubi-quarkus-graalvmce-builder-image:22.3-java17 AS build
-COPY --chown=quarkus:quarkus mvnw /code/mvnw
-COPY --chown=quarkus:quarkus .mvn /code/.mvn
-COPY --chown=quarkus:quarkus pom.xml /code/
-USER quarkus
-WORKDIR /code
+FROM build-tools AS build
+
+COPY pom.xml /code/
 RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline
+
 COPY src /code/src
 RUN ./mvnw package -Pnative
 
