--- a/label-service/Makefile
+++ b/label-service/Makefile
@@ -1,8 +1,8 @@
 default: build
 
 build:
-	docker build -f src/main/docker/Dockerfile.native -t label-service .
-#	mvn clean package && docker build -f src/main/docker/Dockerfile.jvm -t label-service .
+	docker build -f Dockerfile.native -t label-service .
+#	mvn clean package && docker build -f Dockerfile.jvm -t label-service .
 
 build-loadbalancer:
 	docker-compose build loadbalancer
