--- a/label-aggregator-quarkus3/Makefile
+++ b/label-aggregator-quarkus3/Makefile
@@ -1,7 +1,7 @@
 default: build
 
 build:
-	docker build -f src/main/docker/Dockerfile.native -t label-aggregator-quarkus3 .
+	docker build -f Dockerfile.native -t label-aggregator-quarkus3 .
 
 run:
 	docker run -p 8080:8080 --network="host" label-aggregator-quarkus3
