--- a/label-aggregator-springboot3/Dockerfile.native
+++ b/label-aggregator-springboot3/Dockerfile.native
@@ -1,18 +1,16 @@
 ## Stage 1 : build with maven builder image with native capabilities
-FROM quay.io/quarkus/ubi-quarkus-graalvmce-builder-image:22.3-java17 AS build
-COPY --chown=quarkus:quarkus mvnw /code/mvnw
-COPY --chown=quarkus:quarkus .mvn /code/.mvn
+FROM build-tools AS build
+
 COPY --chown=quarkus:quarkus pom.xml /code/
-USER quarkus
-WORKDIR /code
 RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline
+
 COPY src /code/src
 RUN ./mvnw package -Pnative
 
 ## Stage 2 : create the docker final image
 FROM quay.io/quarkus/quarkus-micro-image:2.0
 WORKDIR /work/
-COPY --from=build /code/target/*-runner /work/application
+COPY --from=build /code/target/label-aggregator-springboot3 /work/application
 
 # set up permissions for user `1001`
 RUN chmod 775 /work /work/application \
@@ -23,4 +21,4 @@ RUN chmod 775 /work /work/application \
 EXPOSE 8080
 USER 1001
 
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["./application"]
