feat(native srping) : Add spring native build and run

--- a/label-aggregator-springboot3/Dockerfile.native
+++ b/label-aggregator-springboot3/Dockerfile.native
@@ -1,15 +1,23 @@
 ## Stage 1 : build with maven builder image with native capabilities
 FROM build-tools AS build
 
-COPY --chown=quarkus:quarkus pom.xml /code/
+COPY pom.xml /code/
 RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline
 
 COPY src /code/src
-RUN ./mvnw package -Pnative
+
+WORKDIR /code
+
+RUN ./mvnw -Pnative native:compile
+
+RUN echo aaaa && ls /code/target
 
 ## Stage 2 : create the docker final image
-FROM quay.io/quarkus/quarkus-micro-image:2.0
+FROM docker.io/oraclelinux:8-slim
+
+EXPOSE 8080
 WORKDIR /work/
+
 COPY --from=build /code/target/label-aggregator-springboot3 /work/application
 
 # set up permissions for user `1001`
