--- a/label-aggregator-springboot3/Makefile
+++ b/label-aggregator-springboot3/Makefile
@@ -4,4 +4,4 @@ build:
 	docker build -f Dockerfile.native -t label-aggregator-springboot3 .
 
 run:
-	docker run -p 8080:8080 --network="host" label-aggregator-springboot3
+	docker run -p 8080:8080 --network="host" label-aggregator-springboot3:latest
