label-service : Clean docker-compose

--- a/label-service/Makefile
+++ b/label-service/Makefile
@@ -4,10 +4,10 @@ build:
 	docker build -f Dockerfile.native -t label-service .
 #	mvn clean package && docker build -f Dockerfile.jvm -t label-service .
 
-build-loadbalancer:
-	docker-compose build loadbalancer
+build-load-balancer:
+	docker-compose build load-balancer
 
-run: build-loadbalancer
+run: build-load-balancer
 	docker-compose up -d
 
 stop:
