--- a/label-service/Makefile
+++ b/label-service/Makefile
@@ -3,6 +3,9 @@ default: build
 dev:
 	mvn clean quarkus:dev
 
+gatling:
+	mvn gatling:test
+
 build:
 	docker build -f Dockerfile.native -t label-service .
 #	mvn clean package && docker build -f Dockerfile.jvm -t label-service .
