--- a/label-aggregator-quarkus3/src/main/resources/application.properties
+++ b/label-aggregator-quarkus3/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 quarkus.rest-client.label-client.url=http://localhost:8090/api
 quarkus.rest-client.label-client.scope=javax.inject.Singleton
+quarkus.rest-client.connection-pool-size=2048
