VirtualThreads on label-service

--- a/label-service/Makefile
+++ b/label-service/Makefile
@@ -7,8 +7,8 @@ gatling:
 	mvn gatling:test
 
 build:
-	docker build -f Dockerfile.native -t label-service .
-#	mvn clean package && docker build -f Dockerfile.jvm -t label-service .
+docker build -f Dockerfile.native -t label-service .
+	#	mvn clean package && docker build -f Dockerfile.jvm -t label-service .
 
 build-load-balancer:
 	docker-compose build load-balancer
@@ -19,4 +19,8 @@ run: build-load-balancer
 stop:
 	docker-compose stop
 
-restart: stop run
+restart:
+	stop run
+
+perf:
+	oha -c 2000 -z 10s "http://localhost:8090/api/test"
